【my-blog】【3-1】安装 normalize.css 依赖

--- a/React.js/【慕课网--Tomas】Next.js+React+Node系统实战，搞定SSR服务器渲染/my-blog/package.json
+++ b/React.js/【慕课网--Tomas】Next.js+React+Node系统实战，搞定SSR服务器渲染/my-blog/package.json
@@ -12,6 +12,7 @@
     "@types/mockjs": "^1.0.6",
     "mockjs": "^1.1.0",
     "next": "12.1.6",
+    "normalize.css": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
