--- a/React.js/【慕课网--Tomas】Next.js+React+Node系统实战，搞定SSR服务器渲染/my-blog/package.json
+++ b/React.js/【慕课网--Tomas】Next.js+React+Node系统实战，搞定SSR服务器渲染/my-blog/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/mockjs": "^1.0.6",
+    "antd": "^4.21.4",
     "mockjs": "^1.1.0",
     "next": "12.1.6",
     "normalize.css": "^8.0.1",
@@ -22,6 +23,7 @@
     "@types/react-dom": "18.0.5",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
+    "sass": "^1.53.0",
     "typescript": "4.7.4"
   }
 }
